@@ -147,6 +147,10 @@
   word-wrap: normal;
 }
 
+.form--slick .vertical-tabs .vertical-tabs-panes .vertical-tabs-pane fieldset.collapsible {
+  border: 0;
+}
+
 @media all and (max-width: 900px) {
   .form--slick div.vertical-tabs .vertical-tabs-list {
     width: 30%;
